# rust-bot-3

./: Cargo.toml  sqlite.db
src/: db.rs  main.rs
src/entities/: lot.rs  mod.rs  prelude.rs  trade.rs
src/migrator/: m20221218_000001_create_trade_table.rs  mod.rs
