[package]
name = "rust-bot-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
sea-orm = { version = "0.10.5", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "mock" ] }
sea-orm-migration = "0.10.5"
